--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,9 @@ $body-bg: #ffffff;
 
 // Import Bootstrap and its default variables
 @import '~bootstrap/scss/bootstrap.scss';
+
+h1 {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:4em;
+    font-weight:600;
+}
