Pushing Live State Issue to Heroku to See Build in Production Environment

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,13 +12,16 @@ h1{
     font-weight:600;
 }
 
-a{
-    color:$purple;
-}
-a:hover{
-    color:$dark-purple;
-}
-
-.footer-heart{
-    color:$purple;
+footer{
+    a{
+        #nathandonnelly{
+            color:darksalmon;
+        }
+        #diztro{
+            color:$purple;
+        }
+        #flstudio{
+            color:orange;
+        }
+    }
 }
