Added More Plugins.

--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,7 @@ table{
 .vstdb-component-icon{
     margin-left:-50px;
     margin-right:-50px;
+    transition:.2s;
 }
 .vstdb-component-icon:hover{
     padding-left:75px;
